--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: install requirements
       run: |
-        mamba install -c conda-forge lmfit
+        mamba install -y -c conda-forge lmfit
 
     # Build the book
     - name: Build the book
